Add edit and delete buttons

--- a/views/content/business.ejs
+++ b/views/content/business.ejs
@@ -15,6 +15,8 @@
                             <th scope="col" class="text-center">Contact First Name</th>
                             <th scope="col" class="text-center">Contact Number</th>
                             <th scope="col" class="text-center">Email Address</th>
+                            <th scope="col" class="text-center">Edit Contact</th>
+                            <th scope="col" class="text-center">Delete Contact</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -26,6 +28,11 @@
                             <td class="text-center"><%= business[count].contactFirstName%></td>
                             <td class="text-center"><%= business[count].contactNumber%></td>
                             <td class="text-center"><%= business[count].emailAddress%></td>
+                            <td>
+                                <a href="/Business/edit/<%= business[count]._id %>" class="btn btn-success btn-sm "><i class="fas fa-wrench"></i> Edit</a>
+                            </td>
+                            <td>
+                                <a href="/Business/delete/<%= business[count]._id %>" class="btn btn-danger btn-sm "><i class="fas fa-user-times"></i> Delete</a></td>
                         </tr>
                         
                         <% } %>
