Edit button working

--- a/views/business.ejs
+++ b/views/business.ejs
@@ -6,6 +6,8 @@
     <%- include('./content/business.ejs') -%>}
 <% } else if(title == 'Add Business Contact') { %>    
     <%- include('./content/add-contact.ejs') -%>
+<% } else if(title == 'Edit Business Contact') { %>    
+    <%- include('./content/edit-contact.ejs') -%>
 <% } %>
 
   
