--- a/views/content/edit-contact.ejs
+++ b/views/content/edit-contact.ejs
@@ -1,7 +1,7 @@
 <div class="container">
 
   <div>
-      <h1 class="display-4">Add the Business Contact Informations</h1>
+      <h1 class="display-4">Edit the Business Contact Informations</h1>
         <div id="errorMessage" class="alert alert-danger" role="alert" hidden>
         </div>
 
