--- a/server/views/auth/login.ejs
+++ b/server/views/auth/login.ejs
@@ -1,1 +1,37 @@
+<%- include ../partials/header.ejs %>
 
+<main class="container">
+    
+    <% if (messages.lenght > 0) { %>
+        <div class="alert alert-danger">
+            <% messages %>
+        </div>
+    <%}%>    
+    
+    <div class="row">
+        <div class="offset-md-4 col-md-4">
+            <h1> Login Please </h1>
+
+            <form method="POST">
+                <fieldset class="form-group">
+                    <label for="username">Username</label>
+                    <input type="text" class="form-control" id="username" name="username" placeholder="Please enter Username" required autofocus>
+                </fieldset>
+                
+                <fieldset class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Please Enter password" required> or <a href="/register">Register Here</a>
+                </fieldset>
+
+                <fieldset class="form-group text-center">
+                    <input type="submit" class="btn btn-primary btn-lg " value="Login">
+                    <a href="/">
+                        <input type="button" class="btn btn-warning btn-lg" value="cancel">
+                    </a>
+                </fieldset>
+            </form>
+        </div>
+    </div>
+
+</main>
+<%- include ../partials/footer.ejs %>
