Fixed the register page

--- a/server/views/auth/register.ejs
+++ b/server/views/auth/register.ejs
@@ -35,7 +35,7 @@
 
                 <fieldset class="form-group text-center">
                     <input type="submit" class="btn btn-primary btn-lg" value="Register">
-                    <a href="/">
+                    <a href="/login">
                         <input type="button" class="btn btn-warning btn-lg" value="cancel">
                     </a>
                 </fieldset>
