--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -74,7 +74,22 @@
             <% } %>
             <a class="nav-link" href="/Business"><i class="fas fa-lg fa-user-tie"></i> B.Contacts </a>
           </li>
-         
+        </ul>
+      </div>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+        <% if (typeof displayName == 'string' && displayName) { %>
+          <li class="navbar-text"><i class="fas fa-lg fa-user-tag"></i> Hi there <%= displayName %></li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/logout"><i class="fas fa-lg fa-sign-out-alt"></i> Logout</a>
+          </li>
+            <% } else { %>
+          <li class="nav-item active">
+            <a class="nav-link" href="/login"><i class="fas fa-lg fa-sign-in-alt"></i> Login</a>
+          </li>
+          <% } %>
+        </ul>
       </div>
     </nav>
 
