protected the business page

--- a/server/views/content/business.ejs
+++ b/server/views/content/business.ejs
@@ -4,8 +4,10 @@
             <br>
             <h1> <%= title %> </h1>
             <br>
-
+            
+            <% if(typeof displayName == 'string' && displayName) {%>
             <a href="/Business/add" class="btn btn-primary btn-lg"><i class="fas fa-user-plus"></i> Add new Business contact</a>
+            <% } %>
             <hr>
 
                 <table class="table table-striped table-info table-bordered table-hover">
@@ -15,8 +17,10 @@
                             <th scope="col" class="text-center">Contact First Name</th>
                             <th scope="col" class="text-center">Contact Number</th>
                             <th scope="col" class="text-center">Email Address</th>
-                            <th scope="col" class="text-center">Edit Contact</th>
-                            <th scope="col" class="text-center">Delete Contact</th>
+                            <% if(typeof displayName == 'string' && displayName) {%>
+                                <th scope="col" class="text-center">Edit Contact</th>
+                                <th scope="col" class="text-center">Delete Contact</th>
+                            <% } %>
                         </tr>
                     </thead>
                     <tbody>
@@ -28,11 +32,15 @@
                             <td class="text-center"><%= business[count].contactFirstName%></td>
                             <td class="text-center"><%= business[count].contactNumber%></td>
                             <td class="text-center"><%= business[count].emailAddress%></td>
-                            <td>
-                                <a href="/Business/edit/<%= business[count]._id %>" class="btn btn-success btn-sm "><i class="fas fa-wrench"></i> Edit</a>
-                            </td>
-                            <td>
-                                <a href="/Business/delete/<%= business[count]._id %>" class="btn btn-danger btn-sm "><i class="fas fa-user-times"></i> Delete</a></td>
+                            <% if(typeof displayName == 'string' && displayName) {%>
+                                <td>
+                                    <a href="/Business/edit/<%= business[count]._id %>" class="btn btn-success btn-sm "><i class="fas fa-wrench"></i> Edit</a>
+                                </td>
+                                <td>
+                                    <a href="/Business/delete/<%= business[count]._id %>" class="btn btn-danger btn-sm "><i class="fas fa-user-times"></i> Delete</a>
+                                </td>
+                            <% } %>
+
                         </tr>
                         
                         <% } %>
